remove glc from front end

--- a/web/text.html
+++ b/web/text.html
@@ -314,7 +314,7 @@
     </script>
     <!--Footer add powered by Google -->
     <div class="footer" align="center">
-        <p style="font-family: Poppins;color: rgb(105, 105, 105)">Designed and Developed for the GLC</p>
+        <p style="font-family: Poppins;color: rgb(105, 105, 105)">Designed and Developed by Google</p>
         <img src="google.png" alt="Gemini Logo" width="155.625" height="50.75"
             style="margin-left: 100px; margin-right: 100px; margin-bottom: 10px;">
     </div>
